unified_tests/pattern_matching/match_expression_instantiated_generic_pattern/expect/build.text.stderr
lib.copp:7:9: error: match patterns must not include type arguments
          Box[int64] => "boxed",
          ^
